# Astrophotography-Manager

./: README.md  pyproject.toml
_server/: .env.example
_server/_server/: settings.py
_server/core/: middleware.py  models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_session_target.py  0003_session_caption_session_post_creation_date.py  0004_sessionlike.py  0005_sessionimage.py  0006_userprofile.py  0007_chat.py
_server/core/templates/core/: index.html
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css  main.jsx
client/src/assets/: ChatBar.jsx  ChatWindow.jsx  CreateSessionModal.jsx  EditSessionModal.jsx  MoonCalendar.jsx  csrfhelper.js  sessiondiv.jsx  timeago.js
client/src/pages/: HomePage.jsx  LikedSessionsPage.jsx  MoonCalendarPage.jsx  ProfilePage.jsx  PublicFeedPage.jsx  SessionDetailPage.jsx
doc/: plan.md  script.md
